# qemu

./: .gitignore  README.rst  configure  meson.build
configs/devices/arm-softmmu/: default.mak  psp.mak
configs/devices/i386-softmmu/: default.mak  pc_zen.mak
configs/devices/x86_64-softmmu/: pc_zen.mak
configs/devices/xtensa-softmmu/: default.mak  smu.mak
hw/: Kconfig  meson.build
hw/arm/: Kconfig  meson.build  psp-loader-internal.h  psp-loader.c  psp-soc-regs-0a-00.c  psp-soc-regs-0b-05.c  psp-soc-regs-internal.h  psp-soc-regs.c  psp-soc.c  psp-utils.c  psp.c  smn-bridge.c  smn-misc.c  trace-events  x86-bridge.c
hw/block/: m25p80.c
hw/i2c/: fch-ddr4.c  fch-smbus.c  meson.build
hw/i386/: Kconfig  meson.build  pc_zen.c
hw/intc/: meson.build  psp-int.c  trace-events
hw/isa/: fch-lpc.c  meson.build
hw/mem/: meson.build  psp-umc.c
hw/misc/: Kconfig  amd-df.c  ccp-ops.c  ccp-pci.c  ccp.c  fch-acpi.c  fch.c  meson.build  psp-debug.c  psp-smu.c  trace-events  unimp.c
hw/pci/: pcie_host.c
hw/pci-host/: meson.build  zen-pci-root.c
hw/rtc/: mc146818rtc.c
hw/ssi/: fch-spi.c  meson.build
hw/timer/: meson.build  psp-timer.c
hw/xtensa/: Kconfig  meson.build  xtensa_smu.c  xtensa_smu_dev_5b.c  xtensa_smu_internal.h  xtensa_smu_regs.c  xtensa_smu_smuio.c
hw/zen/: Kconfig  apob.c  ccp-internal.h  ccp-ops.c  ccp.c  ddr4-spd.c  df.c  dxio.c  fch-lpc-bridge.c  fch-rtc.c  fch-smbus.c  fch-spi.c  fch.c  meson.build  psp-dirty.c  psp-fuses.c  psp-ht-bridge.c  psp-intc.c  psp-mb.c  psp-ocbl.c  psp-regs.c  psp-smn-bridge.c  psp-soc.c  psp-timer.c  smn-misc.c  smu.c  trace-events  trace.h  zen-cpuid.c  zen-mobo.c  zen-pci-root.c  zen-pmu.c  zen-rom.c  zen-umc.c  zen-utils.c
include/hw/arm/: psp-loader.h  psp-soc-regs.h  psp-soc.h  psp-utils.h  smn-bridge.h  smn-misc.h  x86-bridge.h
include/hw/i2c/: fch-ddr4.h  fch-smbus.h
include/hw/intc/: psp-int.h
include/hw/isa/: fch-lpc.h
include/hw/mem/: psp-umc.h
include/hw/misc/: amd-df.h  ccp-pci.h  ccp.h  fch-acpi.h  fch.h  psp-debug.h  psp-smu.h  unimp.h
include/hw/pci-host/: zen-pci-root.h
include/hw/rtc/: mc146818rtc.h  mc146818rtc_regs.h
include/hw/ssi/: fch-spi.h
include/hw/timer/: psp-timer.h
include/hw/zen/: amdfwtool.h  apob.h  ccp-ops.h  ccp.h  ddr4-spd.h  df.h  dxio.h  fch-lpc-bridge.h  fch-rtc.h  fch-smbus.h  fch-spi.h  fch.h  psp-dirty.h  psp-fuses.h  psp-ht-bridge.h  psp-intc.h  psp-mb.h  psp-ocbl.h  psp-regs.h  psp-smn-bridge.h  psp-soc.h  psp-timer.h  smn-misc.h  smu.h  zen-cpuid.h  zen-mobo.h  zen-pci-root.h  zen-pmu.h  zen-rom.h  zen-umc.h  zen-utils.h
pc-bios/psp/: Makefile  ccp.c  ccp.h  loader-internal.h  loader.c  loader.elf  loader.ld  utils.c  utils.h
